chore: update gitignore and add code smell rule
- Update .claude/ ignore pattern in .gitignore
- Add "utilities burying main class" code smell to .ruler/
- Add .qlty/ configuration for code quality tooling

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ CLAUDE.md.bak
 specs/tmp/*
 docs/plans/*
 # Continuous Claude cache (local only)
-.claude/cache/
 thoughts/*
 specs/deprecated/*
+.claude/*
