feat: add Graph API with InputSpec and GraphNode
- Add Graph class for defining computation graphs
- Add InputSpec with required/optional/seeds categories
- Add GraphNode for nested graph support
- Add defaults property to FunctionNode
- Update docs and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "A hierarchical and modular graph workflow framework for AI & ML"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "networkx>=3.2",
+]
 authors = [
     {name = "Gilad Rubin", email = "me@giladrubin.com"}
 ]
