--- a/.doc-manager.yml
+++ b/.doc-manager.yml
@@ -1,113 +1,134 @@
-# Documentation Manager Configuration
-# Platform: GitBook
-# Project: hypergraph - graph-based workflow framework for AI & ML
-
 platform: gitbook
-
-# Documentation strategy for library/SDK
-# all_then_underscore: Documents all public APIs, then internal with underscore prefix
-strategy: all_then_underscore
-
-# Project metadata
-project:
-  name: hypergraph
-  type: library
-  language: python
-  description: "A hierarchical and modular graph workflow framework for AI & ML"
-  repository: https://github.com/gilad-rubin/hypergraph
-
-# Source patterns for documentation generation
-# NOTE: specs/ is EXCLUDED - it contains internal specifications, not public docs
+exclude:
+- .venv/**
+- tmp/**
+- .claude/**
+- specs/**
+- .ruler/**
+- AGENTS.md
+- CLAUDE.md
+- docs/specs/**
+- docs/.ruler/**
 sources:
-  include:
-    # Public Python source code
-    - "src/hypergraph/**/*.py"
-    # Public documentation files (when created)
-    - "docs/**/*.md"
-    # Root documentation
-    - "README.md"
-    - "CHANGELOG.md"
-    - "CONTRIBUTING.md"
-  exclude:
-    # Internal specifications (NOT public documentation)
-    - "specs/**"
-    # Build artifacts and caches
-    - ".venv/**"
-    - "**/__pycache__/**"
-    - "*.egg-info/**"
-    - "build/**"
-    - "dist/**"
-    # Test files (internal)
-    - "tests/**"
-    # Development/internal files
-    - ".ruler/**"
-    - ".claude/**"
-    - ".zenflow/**"
-    - "thoughts/**"
-    # Editor/IDE files
-    - ".pytest_cache/**"
-    - ".ruff_cache/**"
-    - ".qlty/**"
-    # Generated agent instructions
-    - "CLAUDE.md"
-    - "AGENTS.md"
+- src/**/*.py
+docs_path: docs
+use_gitignore: false
+doc_mappings:
+  cli: docs/reference/command-reference.md
+  api: docs/reference/api.md
+  config: docs/reference/configuration.md
+  dependency: docs/getting-started/installation.md
+  infrastructure: docs/development/ci-cd.md
+metadata:
+  language: Python
+  created: '2026-01-10T10:32:52.009771'
+  version: 1.0.0
+include_root_readme: true
 
-# GitBook-specific configuration
-gitbook:
-  # Space configuration (set when GitBook space is created)
-  space_id: null  # Will be set after GitBook setup
+# ============================================================================
+# Configuration Guide & Examples
+# ============================================================================
 
-# Python library preset configuration
-presets:
-  python_library:
-    # API documentation settings
-    api_docs:
-      enabled: true
-      generator: "auto"  # Auto-generate from docstrings
-      include_private: false
-      include_dunder: false
+# Exclude Patterns
+# ----------------
+# Use glob patterns to exclude files from documentation tracking.
+# Examples:
+#   exclude:
+#     - "**/node_modules/**"     # Exclude all node_modules directories
+#     - "**/*.pyc"               # Exclude Python bytecode files
+#     - "**/dist/**"             # Exclude build artifacts
+#     - "**/.git/**"             # Exclude git directory
+#     - "**/venv/**"             # Exclude Python virtual environments
+#     - "**/__pycache__/**"      # Exclude Python cache
 
-    # Docstring format
-    docstring_format: "google"
+# Source Files (Glob Patterns)
+# -----------------------------
+# Glob patterns to specify which source files to track.
+# IMPORTANT: Use glob patterns (e.g., 'src/**/*.py'), not just directory names.
+# Examples:
+#   sources:
+#     - "src/**/*.py"            # All Python files in src/
+#     - "lib/**/*.js"            # All JavaScript files in lib/
+#     - "packages/core/**/*.ts"  # TypeScript files in packages/core/
+#     - "**/*.go"                # All Go files in project
 
-    # Type hints in documentation
-    show_type_hints: true
+# Documentation Path
+# -------------------
+# Path to documentation directory (relative to project root).
+# Common values: docs, doc, documentation, website/docs
 
-    # Example extraction
-    extract_examples: true
-    examples_dir: "docs/examples"
+# Platform
+# --------
+# Documentation platform: mkdocs, sphinx, hugo, docusaurus, etc.
+# Set to 'unknown' if not using a specific platform.
 
-# Quality thresholds
-quality:
-  # Minimum documentation coverage for public APIs
-  min_coverage: 80
+# Include Root README
+# -------------------
+# Set to true to include the root README.md in documentation operations.
+# When enabled, validation, quality assessment, and change detection
+# will include the root README.md alongside docs in the docs/ directory.
+# Default: false (backwards compatible)
 
-  # Require docstrings for public functions/classes
-  require_docstrings: true
+# Use Gitignore
+# -------------
+# Set to true to automatically exclude files based on .gitignore patterns.
+# When enabled, files ignored by git will also be excluded from doc tracking.
+# Priority: user excludes > .gitignore > built-in defaults
+# Default: false (opt-in feature)
+# Example:
+#   use_gitignore: true
+#   exclude:              # Additional patterns beyond .gitignore
+#     - "specs/**"
 
-  # Check for broken links
-  check_links: true
+# Documentation Path Mappings
+# ---------------------------
+# Map change categories to documentation file paths.
+# Supports non-standard layouts (documentation/, wiki/, _docs/, etc.).
+# When not configured, falls back to default paths in docs/.
+# Example:
+#   doc_mappings:
+#     cli: 'docs/reference/command-reference.md'
+#     api: 'docs/reference/api.md'
+#     config: 'docs/reference/configuration.md'
+#     dependency: 'docs/getting-started/installation.md'
+#     infrastructure: 'docs/development/ci-cd.md'
+# Non-standard layout example:
+#   doc_mappings:
+#     cli: 'documentation/commands.md'  # Uses documentation/ instead of docs/
+#     api: 'wiki/API-Reference.md'      # Uses wiki/ directory
 
-  # Freshness threshold (days since last update)
-  max_staleness_days: 90
-
-# Sync settings
-sync:
-  # Auto-sync documentation with code changes
-  auto_sync: false
-
-  # Files that trigger doc regeneration when changed
-  triggers:
-    - "src/hypergraph/**/*.py"
-    - "docs/**/*.md"
-
-  # Sync direction
-  direction: "code_to_docs"  # docs follow code, not vice versa
-
-# Output configuration
-output:
-  # Local documentation build directory
-  build_dir: "docs/_build"
-
-  # GitBook export format
-  format: "gitbook"
+# API Coverage Configuration
+# --------------------------
+# Configure how public symbols are detected for API coverage metrics.
+# Follows industry standards from Sphinx autodoc and mkdocstrings.
+# Example:
+#   api_coverage:
+#     strategy: 'all_then_underscore'  # Options: all_then_underscore, all_only, underscore_only
+#     preset: 'pydantic'               # See preset list below
+#     exclude_symbols:                 # Additional patterns (fnmatch syntax)
+#       - 'my_internal_*'
+#     include_symbols:                 # Force-include these (overrides exclusions)
+#       - 'MySpecialClass'
+#
+# Strategy options:
+#   - all_then_underscore: Use __all__ if defined, else underscore convention (default)
+#   - all_only: Only symbols in __all__ are public (strict)
+#   - underscore_only: Only use underscore convention, ignore __all__
+#
+# Available presets by language:
+#   Python:
+#     - pydantic: Config, model_config, validators, validate_*
+#     - django: Meta, DoesNotExist, MultipleObjectsReturned
+#     - fastapi: Config, model_config
+#     - pytest: test_*, Test*, fixture, conftest
+#     - sqlalchemy: metadata, __table__, __mapper__, _sa_*
+#   JavaScript/TypeScript:
+#     - jest: describe, it, test, beforeEach, afterEach, expect
+#     - vitest: same as jest + vi, suite
+#     - react: _render*, UNSAFE_*, __*, $$typeof
+#     - vue: $_*, __v*, internal render helpers
+#   Go:
+#     - go-test: Test*, Benchmark*, Example*, Fuzz*
+#   Rust:
+#     - rust-test: tests, test_*, bench_*
+#     - serde: Serialize, Deserialize, __serde_*
