--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ dev = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.3.0",
     "pytest-xdist>=3.5.0",
+    "shapely>=2.1.2",
 ]
 
 [build-system]
