--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ dev = [
     "playwright>=1.56.0",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.3.0",
+    "pytest-playwright>=0.7.2",
     "pytest-xdist>=3.5.0",
     "shapely>=2.1.2",
 ]
