--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,7 @@ Issues = "https://github.com/gilad-rubin/hypergraph/issues"
 [dependency-groups]
 dev = [
     "allpairspy>=2.5.1",
+    "pillow>=11.0.0",
     "playwright>=1.56.0",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.3.0",
