--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ deprecated/*
 outputs/
 *.pyc
 .auto-claude/*
+
+# Auto Claude generated files
+.auto-claude/
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.worktrees/
+.security-key
+logs/security/
